# p2p-shipyard

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  flake.nix  hashmap.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-and-deploy-site.yaml  build-hc-embark.yaml  build-hc-pilot.yaml  build-scaffold-tauri-happ.yaml  (+4 more)
assets/: app.CSrCeF0d.js  documentation_android_developing.md.BfMwVFoJ.js  documentation_android_developing.md.CtEKB74s.js  documentation_android_developing.md.CtEKB74s.lean.js  documentation_android_developing.md.jPxXfnv_.js  documentation_android_device-setup.md.BkD5xPhH.js  documentation_android_device-setup.md.BkD5xPhH.lean.js  documentation_android_project-setup.md.BZWO63GF.js  documentation_android_project-setup.md.BZWO63GF.lean.js  documentation_android_project-setup.md.DBKuvUNi.js  documentation_android_project-setup.md.DJvJKJnj.js  documentation_android_shipping.md.BIL9eqde.js  documentation_android_shipping.md.BIL9eqde.lean.js  documentation_android_shipping.md.BRp55R_m.js  documentation_android_shipping.md.BRp55R_m.lean.js  documentation_android_shipping.md.DB7RAPPC.js  documentation_android_shipping.md.DB7RAPPC.lean.js  documentation_desktop_shipping.md.G2_tgN8G.js  documentation_desktop_shipping.md.G2_tgN8G.lean.js  documentation_faqs.md.CvZRgl5J.js  documentation_faqs.md.CvZRgl5J.lean.js  documentation_getting-to-know-tauri.md.BJK_PFbs.js  documentation_getting-to-know-tauri.md.CG_ZLL0S.js  documentation_getting-to-know-tauri.md.CG_ZLL0S.lean.js  documentation_getting-to-know-tauri.md.Dlqfq77e.js  documentation_how-to-create-a-holochain-runtime.md.CdrsxGhD.js  documentation_how-to-create-a-holochain-runtime.md.CdrsxGhD.lean.js  documentation_how-to-create-a-holochain-runtime.md.TaVSe08d.js  documentation_how-to-create-a-holochain-runtime.md.zyYNy7Dn.js  documentation_how-to-create-an-end-user-happ.md.Bt9XApRN.js  documentation_how-to-create-an-end-user-happ.md.CeAWaSHw.js  documentation_how-to-create-an-end-user-happ.md.CeAWaSHw.lean.js  documentation_how-to-create-an-end-user-happ.md.jSP6h-W0.js  documentation_how-to-create-an-end-user-happ.md.jSP6h-W0.lean.js  documentation_troubleshooting.md.BO9YzLjL.js  documentation_troubleshooting.md.DCx55AKM.js  documentation_troubleshooting.md.Du2vl5Uj.js  documentation_troubleshooting.md.Du2vl5Uj.lean.js  index.md.D_nZdwiT.js  license_license.md.Bgmh-vqY.js  (+2 more)
crates/hc-embark/: Cargo.toml  default.nix  tauri.conf.json
crates/hc-embark/src/: main.rs
crates/hc-pilot/: Cargo.toml  default.nix  tauri.conf.json
crates/hc-pilot/capabilities/: main.json
crates/hc-pilot/src/: main.rs
crates/holochain-manager-uniffi/: Cargo.toml  generate-bindings-debug.sh  generate-bindings-release.sh
crates/holochain-manager-uniffi/scripts/: build-debug.sh  build-release.sh  build.sh
crates/holochain-manager-uniffi/src/: error.rs  lib.rs  runtime.rs  types.rs
crates/holochain_runtime/: Cargo.toml
crates/holochain_runtime/src/: config.rs  error.rs  holochain_runtime.rs  lair_signer.rs  launch.rs  lib.rs  utils.rs
crates/holochain_runtime/src/happs/: install.rs  update.rs
crates/holochain_runtime/src/launch/: config.rs  mdns.rs  signal.rs
crates/holochain_runtime_uniffi/: Cargo.toml  README.md  uniffi.toml
crates/holochain_runtime_uniffi/scripts/: build.sh
crates/holochain_runtime_uniffi/src/: config.rs  error.rs  lib.rs  runtime.rs  types.rs
crates/scaffold-tauri-happ/: Cargo.toml  default.nix  run_test.sh
crates/scaffold-tauri-happ/fixture/: flake.nix
crates/scaffold-tauri-happ/src/: lib.rs
crates/scaffold-tauri-happ/templates/end-user-happ/.github/workflows/: release-tauri-app.yaml.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/src-tauri/: Cargo.toml.hbs  build.rs.hbs  tauri.conf.json.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/src-tauri/src/: lib.rs.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/ui/: vite.config.ts.hbs
crates/tauri-plugin-holochain-foreground-service-consumer/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-plugin-holochain-foreground-service-consumer/examples/tauri-app/src-tauri/capabilities/: default.json
crates/tauri-plugin-holochain-foreground-service-consumer/examples/tauri-app/src-tauri/src/: lib.rs
crates/tauri-plugin-holochain-service/: Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-holochain-service/android/: .gitignore  build.gradle.kts  gradle.properties  local.properties  settings.gradle
crates/tauri-plugin-holochain-service/android/src/androidTest/java/: ExampleInstrumentedTest.kt
crates/tauri-plugin-holochain-service/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-holochain-service/android/src/main/aidl/: IHolochainService.aidl
crates/tauri-plugin-holochain-service/android/src/main/java/: AidlTypes.kt  HolochainService.kt  HolochainServiceClient.kt  HolochainServiceConsumer.kt  HolochainServicePlugin.kt  InvokeTypes.kt  JSCasting.kt  Utils.kt
crates/tauri-plugin-holochain-service/android/src/main/java/uniffi/holochain_runtime_uniffi/: holochain_runtime_uniffi.kt
crates/tauri-plugin-holochain-service/examples/tauri-app/: package.json  pnpm-lock.yaml
crates/tauri-plugin-holochain-service/examples/tauri-app/src/: App.svelte
crates/tauri-plugin-holochain-service/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-plugin-holochain-service/examples/tauri-app/src-tauri/capabilities/: default.json
crates/tauri-plugin-holochain-service/examples/tauri-app/src-tauri/src/: lib.rs
crates/tauri-plugin-holochain-service/guest-js/holochain-env/: index.ts
crates/tauri-plugin-holochain-service/guest-js/tauri-commands/: index.ts
crates/tauri-plugin-holochain-service/permissions/schemas/: schema.json
crates/tauri-plugin-holochain-service/src/: lib.rs  mobile.rs  types.rs
documentation/: faqs.html  getting-to-know-tauri.html  how-to-create-a-holochain-runtime.html  how-to-create-an-end-user-happ.html  troubleshooting.html
license/: license.html
nix/: holochain-tauri-happ-artifacts.nix
(+154 files in other folders)
