[workspace]
members = ["crates/*", "nix/reference-tauri-happ"]
resolver = "2"
exclude = [ "examples/end-user-happ", "examples/holochain-runtime", "crates/tauri-plugin-holochain-service/examples/tauri-app", "crates/tauri-plugin-holochain-service-consumer/examples/tauri-app"]


[patch.crates-io]
async-compat = { git = "https://github.com/jplatte/async-compat", rev = "b83b197622d8b5756d3594ce73b720896b07faae" }
