[package]
name = "hc-embark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"

tauri-plugin-holochain = { path = "../tauri-plugin-holochain" }
holochain_types = "0.3.1"
holochain_client = "0.5.0-rc"

clap = {version = "4.5.4", features = ["derive"]}
log = "0.4"
url2 = "0.0.6"
anyhow = "1"
tempdir = "0.3.7"
lair_keystore = { version = "0.4.0" }

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", default-features = false, features = [
] }

