[package]
name = "holochain-manager-uniffi"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "staticlib"]
name = "holochain_manager_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.28.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
