[package]
name = "holochain_runtime_uniffi"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "staticlib"]
name = "holochain_runtime_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.28.1", features = ["cli", "tokio" ] }
holochain_runtime = { path = "../holochain_runtime", default-features = false }
holochain_conductor_api = "0.3.2"
holochain_types = "0.3.2"

thiserror = "1.0.63"
url2 = "0.0.6"
log = "0.4.22"
android_logger = "0.14.1"

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build"] }
