[package]
name = "scaffold-tauri-happ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scaffold_tauri_happ"
path = "src/lib.rs"

[[bin]]
name = "scaffold-tauri-happ"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.81"
ignore = "0.4"
serde_json = {version = "1", features = ["std", "preserve_order"]}
serde_yaml = {version = "0.9" }
serde = "1"
clap = {version = "4.5.4", features = ["derive"]}
nix_scaffolding_utils = { git = "https://github.com/darksoil-studio/tnesh-stack", branch ="main-0.4" }
rust_scaffolding_utils = { git = "https://github.com/darksoil-studio/tnesh-stack", branch = "main-0.4" }
file_tree_utils = { git = "https://github.com/darksoil-studio/tnesh-stack", branch = "main-0.4" }
npm_scaffolding_utils = { git = "https://github.com/darksoil-studio/tnesh-stack", branch = "main-0.4" }
holochain_scaffolding_utils = { git = "https://github.com/darksoil-studio/tnesh-stack", branch = "main-0.4" }
templates_scaffolding_utils = { git = "https://github.com/darksoil-studio/tnesh-stack", branch = "main-0.4" }
include_dir = "0.7.3"
thiserror = "1"
handlebars = "5.1.0"
build-fs-tree = "0.4"
regex = "1.10.4"
path-clean = "1"
dialoguer = "0.11"
colored = "2.1.0"
convert_case = "0.6"

[dev-dependencies]
pretty_assertions = "1.4"
