[package]
name = "tauri-plugin-holochain-service"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-holochain-service"

[dependencies]
tauri = { version = "2.2.5" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
tauri-build = "2.0.5"
