[package]
name = "tauri-plugin-foreground-service-consumer-example-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "tauri_plugin_foreground_service_consumer_example_app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["unstable"] }
tauri-plugin-holochain-foreground-service-consumer = { path = "../../../" }
tracing = "0.1"
